--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="row w-75">
         <div class="col-4 d-flex justify-content-center">
           <div class="card shadow" style="width: 80%; border-radius: 10px">
-            <img class="card-img-top" src="/images/temperature.jpg" alt="Card image cap" height="200px" style="border-top-right-radius: 10px; border-top-left-radius: 10px" />
+            <img class="card-img-top" src="temperature.jpg" alt="Card image cap" height="200px" style="border-top-right-radius: 10px; border-top-left-radius: 10px" />
             <div class="card-body">
               <h5 class="card-title">Temprature</h5>
               <h2 class="card-text text-center text-primary" style="margin-top: -5px;"><span id="temp">23</span><span class="text-muted fw-bold" style="font-weight: 600;">&#8451</span></h2>
@@ -44,7 +44,7 @@
 
         <div class="col-4 d-flex justify-content-center rounded-3">
           <div class="card shadow" style="width: 80%; border-radius: 10px">
-            <img class="card-img-top" src="/images/humidity.jpg" alt="Card image cap" height="200px" style="border-top-right-radius: 10px; border-top-left-radius: 10px;"/>
+            <img class="card-img-top" src="humidity.jpg" alt="Card image cap" height="200px" style="border-top-right-radius: 10px; border-top-left-radius: 10px;"/>
             <div class="card-body">
               <h5 class="card-title">Humidity</h5>
               <h2 class="card-text text-center text-primary" style="margin-top: -5px;"><span id="humidity">23</span><span class="text-muted">%</span> </h2>
@@ -58,7 +58,7 @@
         </div>
         <div class="col-4 d-flex justify-content-center">
           <div class="card shadow" style="width: 80%; border-radius: 10px">
-            <img class="card-img-top" src="/images/wind.jpg" alt="Card image cap" height="200px" style="border-top-right-radius: 10px; border-top-left-radius: 10px"/>
+            <img class="card-img-top" src="wind.jpg" alt="Card image cap" height="200px" style="border-top-right-radius: 10px; border-top-left-radius: 10px"/>
             <div class="card-body">
               <h5 class="card-title">Wind</h5>
               <h2 class="card-text text-center text-primary" style="margin-top: -5px;"><span id="wind_speed">23</span><span class="text-muted">Km/h</span></h2>
