--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
     <div class="container-xxl d-flex justify-content-center py-5">
       <div class="row w-75">
-        <div class="col-4 d-flex justify-content-center">
+        <div class="col-4 d-flex justify-content-center mb-5">
           <div class="card shadow" style="width: 80%; border-radius: 10px">
-            <img class="card-img-top" src="temperature.jpg" alt="Card image cap" height="200px" style="border-top-right-radius: 10px; border-top-left-radius: 10px" />
+            <img class="card-img-top" src="https://images.unsplash.com/photo-1532764591304-d1f14225ccfc?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="Card image cap" height="200px" style="border-top-right-radius: 10px; border-top-left-radius: 10px" />
             <div class="card-body">
               <h5 class="card-title">Temprature</h5>
               <h2 class="card-text text-center text-primary" style="margin-top: -5px;"><span id="temp">23</span><span class="text-muted fw-bold" style="font-weight: 600;">&#8451</span></h2>
@@ -42,9 +42,9 @@
           </div>
         </div>
 
-        <div class="col-4 d-flex justify-content-center rounded-3">
+        <div class="col-4 d-flex justify-content-center rounded-3 mb-5">
           <div class="card shadow" style="width: 80%; border-radius: 10px">
-            <img class="card-img-top" src="humidity.jpg" alt="Card image cap" height="200px" style="border-top-right-radius: 10px; border-top-left-radius: 10px;"/>
+            <img class="card-img-top" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcSFgyNSjWWUCA0shJrCxReMnuXVtAQ31brI1LqRa_AAZ1Wz0srx" alt="Card image cap" height="200px" style="border-top-right-radius: 10px; border-top-left-radius: 10px;"/>
             <div class="card-body">
               <h5 class="card-title">Humidity</h5>
               <h2 class="card-text text-center text-primary" style="margin-top: -5px;"><span id="humidity">23</span><span class="text-muted">%</span> </h2>
@@ -56,9 +56,9 @@
             </ul>
           </div>
         </div>
-        <div class="col-4 d-flex justify-content-center">
+        <div class="col-4 d-flex justify-content-center mb-5">
           <div class="card shadow" style="width: 80%; border-radius: 10px">
-            <img class="card-img-top" src="wind.jpg" alt="Card image cap" height="200px" style="border-top-right-radius: 10px; border-top-left-radius: 10px"/>
+            <img class="card-img-top" src="https://images.unsplash.com/photo-1614785246748-edc43ab91f76?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8cGxhbnQlMjBsaWZlfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60" alt="Card image cap" height="200px" style="border-top-right-radius: 10px; border-top-left-radius: 10px"/>
             <div class="card-body">
               <h5 class="card-title">Wind</h5>
               <h2 class="card-text text-center text-primary" style="margin-top: -5px;"><span id="wind_speed">23</span><span class="text-muted">Km/h</span></h2>
@@ -80,3 +80,21 @@
     crossorigin="anonymous"
   ></script>
 </html>
+
+<style>
+
+  @media screen and (max-width: 650px) {
+    input {
+      width: 250px !important;
+    }
+
+    .row{
+      display: grid!important;
+      width: 100%!important;
+    }
+
+    .col-4{
+      max-width: 100%!important;
+    } 
+  }
+</style>
